# big-llm-task

./: .gitignore  README.md  USER_GUIDE.md  pyproject.toml
big_llm_task/: __main__.py  cli.py  concatenator.py  config.py  credentials.py  models.py  runner.py
big_llm_task/providers/: anthropic.py  base.py  bedrock.py  openrouter.py
